chore: Fix readme and cd command on workflow.

--- a/.github/workflows/02-develop.yml
+++ b/.github/workflows/02-develop.yml
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 jobs:
-  ecs-deployment:
+  ec2-deployment:
     uses: ./.github/workflows/ec2-deployment.yml
     with:
       environment: dev
