--- a/.github/workflows/ec2-deployment.yml
+++ b/.github/workflows/ec2-deployment.yml
@@ -93,7 +93,7 @@ jobs:
         id: upload-file
         run:
           S3URI=s3://${{ steps.config.outputs['deploy__aws-deploy-bucket'] }}/${{ needs.release-management.outputs.NEW_TAG }}.zip 
-          aws s3 cp ${{ needs.release-management.outputs.NEW_TAG }}.zip $S3URI
+          aws s3 cp ${{ needs.release-management.outputs.NEW_TAG }}.zip "$S3URI"
 
   deploy-dev:
     name: "[DEV] Deployment"
