chore: changing needs of step deploy

--- a/.github/workflows/ec2-deployment.yml
+++ b/.github/workflows/ec2-deployment.yml
@@ -103,6 +103,7 @@ jobs:
       s3-key: ${{ needs.release-management.outputs.NEW_TAG}}
     needs: 
       - release-management
+      - upload-app-s3
   create-pull-request:
     runs-on: ubuntu-latest
     name: Create Pull Request
