chore: Adding support to multilines on create deployment command.

--- a/.github/workflows/deploy-ec2-terraform.yml
+++ b/.github/workflows/deploy-ec2-terraform.yml
@@ -82,7 +82,8 @@ jobs:
           - name: Create a deployment on CodeDeploy
             if: steps.config.outputs.terraform__destroy != 'true'
             id: codedeploy
-            run: aws deploy create-deployment \
+            run: |
+              aws deploy create-deployment \
                 --application-name ${{ steps.config.outputs[format('{0}{1}{2}','environments__', inputs.environment,'__app-name')] }} \
                 --deployment-group-name ${{ steps.config.outputs[format('{0}{1}{2}','environments__', inputs.environment,'__deployment-group-name')] }}    \
                 --s3-location bucket=${{ steps.config.outputs['deploy__aws-deploy-bucket'] }},key=${{ inputs.s3-key }}.zip,bundleType=zip \
