--- a/app/appspec.yml
+++ b/app/appspec.yml
@@ -2,8 +2,8 @@ version: 0.0
 os: linux
 
 files:
-- source: app/
-  destination: /home/ec2-user/app
+- source: /
+  destination: /home/ubuntu/app
 
 hooks:
   ApplicationStop:
