chore: changing way to set deployment id

--- a/.github/workflows/deploy-ec2-terraform.yml
+++ b/.github/workflows/deploy-ec2-terraform.yml
@@ -95,7 +95,7 @@ jobs:
             id: waitcodedeploy
             run: |
               while true; do
-                STATUS=$(aws deploy get-deployment --deployment-id ${{ steps.codedeploy.outputs['DEPLOYMENT_ID'] }} --query 'deploymentInfo.status' --output text)
+                STATUS=$(aws deploy get-deployment --deployment-id '${{ steps.codedeploy.outputs['DEPLOYMENT_ID'] }}' --query 'deploymentInfo.status' --output text)
                 echo "Current Status: $STATUS"
 
                 if [[ "$STATUS" == "Succeeded" ]]; then
